// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the H7 component should accept additional props 1`] = `
<Text
  accessible={false}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#303030",
      "fontFamily": "OpenSans-Regular",
      "fontSize": 14,
      "lineHeight": 15.78,
    }
  }
>
  "We may speak about a place where there are no tears, no death, no fear, no night; but those are just the benefits of heaven. The beauty of heaven is seeing God." ― Max Lucado
</Text>
`;

exports[`the H7 component should accept and render passed in styles 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "salmon",
      "fontFamily": "OpenSans-Regular",
      "fontSize": 14,
      "lineHeight": 15.78,
    }
  }
>
  Salmon text
</Text>
`;

exports[`the H7 component should render a loading state 1`] = `
<View
  style={
    Object {
      "alignSelf": "stretch",
      "backgroundColor": "#A5A5A5",
      "borderRadius": 6,
      "height": 14,
      "marginVertical": 0.8899999999999997,
      "width": "40%",
    }
  }
/>
`;

exports[`the H7 component should render correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#303030",
      "fontFamily": "OpenSans-Regular",
      "fontSize": 14,
      "lineHeight": 15.78,
    }
  }
>
  Default H7 text
</Text>
`;
